model save and training data for all train and validate data saved //todo:loading the saved data from google drive

--- a/Subin_dQd.ipynb
+++ b/Subin_dQd.ipynb
@@ -569,7 +569,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b94622d8-16c9-4a44-dd2a-0cceb7e2d9c6"
+        "outputId": "12cadbe9-cde8-49b8-af5b-c1f2a5a263c0"
       },
       "source": [
         "# saving the training data\n",
@@ -581,9 +581,16 @@
         "\n",
         "pickle_out=open(\"x_validate.pickle\",\"wb\")\n",
         "pickle.dump(x_validate,pickle_out)\n",
+        "pickle_out.close\n",
+        "\n",
+        "pickle_out=open(\"y_train.pickle\",\"wb\")\n",
+        "pickle.dump(y_train,pickle_out)\n",
+        "pickle_out.close\n",
+        "pickle_out=open(\"y_validate.pickle\",\"wb\")\n",
+        "pickle.dump(y_validate,pickle_out)\n",
         "pickle_out.close"
       ],
-      "execution_count": 30,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +602,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 52
         }
       ]
     },
@@ -608,7 +615,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 530
         },
-        "outputId": "c2639e97-d83f-44a8-c09c-7f5c01f2b205"
+        "outputId": "b78ea64e-09b4-41bb-8a7a-c754f7947e3d"
       },
       "source": [
         "#uploading the pickle saved trained data in drive\n",
@@ -627,14 +634,218 @@
         "\n",
         "file = drive.CreateFile({'parents':[{u'id': folder_id}]})\n",
         "file.SetContentFile('x_train.pickle')\n",
-        "file.Upload() "
+        "file.Upload() \n"
       ],
-      "execution_count": 42,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "W0617 10:01:08.332728 140040332998528 __init__.py:44] file_cache is unavailable when using oauth2client >= 4.0.0\n",
+            "W0617 10:10:45.242820 140040332998528 __init__.py:44] file_cache is unavailable when using oauth2client >= 4.0.0\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 36, in autodetect\n",
+            "    from google.appengine.api import memcache\n",
+            "ModuleNotFoundError: No module named 'google.appengine'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 33, in <module>\n",
+            "    from oauth2client.contrib.locked_file import LockedFile\n",
+            "ModuleNotFoundError: No module named 'oauth2client.contrib.locked_file'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 37, in <module>\n",
+            "    from oauth2client.locked_file import LockedFile\n",
+            "ModuleNotFoundError: No module named 'oauth2client.locked_file'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 41, in autodetect\n",
+            "    from . import file_cache\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 41, in <module>\n",
+            "    'file_cache is unavailable when using oauth2client >= 4.0.0')\n",
+            "ImportError: file_cache is unavailable when using oauth2client >= 4.0.0\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m1dL1lFU6HWZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 530
+        },
+        "outputId": "7dc60fbf-94a1-4931-ca57-924f55217b84"
+      },
+      "source": [
+        "#uploading the pickle saved trained data in drive\n",
+        "from pydrive.auth import GoogleAuth\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from google.colab import auth\n",
+        "from oauth2client.client import GoogleCredentials\n",
+        "\n",
+        "# 1. Authenticate and create the PyDrive client.\n",
+        "auth.authenticate_user()\n",
+        "gauth = GoogleAuth()\n",
+        "gauth.credentials = GoogleCredentials.get_application_default()\n",
+        "drive = GoogleDrive(gauth)  \n",
+        "folder_id='1nMGkHjtKSRoGEOVg5-r04Q0lvWGIWVpS'\n",
+        "# get the folder id where you want to save your file\n",
+        "\n",
+        "file = drive.CreateFile({'parents':[{u'id': folder_id}]})\n",
+        "file.SetContentFile('x_validate.pickle')\n",
+        "file.Upload() "
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "W0617 10:11:02.623712 140040332998528 __init__.py:44] file_cache is unavailable when using oauth2client >= 4.0.0\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 36, in autodetect\n",
+            "    from google.appengine.api import memcache\n",
+            "ModuleNotFoundError: No module named 'google.appengine'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 33, in <module>\n",
+            "    from oauth2client.contrib.locked_file import LockedFile\n",
+            "ModuleNotFoundError: No module named 'oauth2client.contrib.locked_file'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 37, in <module>\n",
+            "    from oauth2client.locked_file import LockedFile\n",
+            "ModuleNotFoundError: No module named 'oauth2client.locked_file'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 41, in autodetect\n",
+            "    from . import file_cache\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 41, in <module>\n",
+            "    'file_cache is unavailable when using oauth2client >= 4.0.0')\n",
+            "ImportError: file_cache is unavailable when using oauth2client >= 4.0.0\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zo6OBk1H6JQx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 530
+        },
+        "outputId": "24d6adee-cbf9-4d29-c91e-e79ad8544046"
+      },
+      "source": [
+        "#uploading the pickle saved trained data in drive\n",
+        "from pydrive.auth import GoogleAuth\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from google.colab import auth\n",
+        "from oauth2client.client import GoogleCredentials\n",
+        "\n",
+        "# 1. Authenticate and create the PyDrive client.\n",
+        "auth.authenticate_user()\n",
+        "gauth = GoogleAuth()\n",
+        "gauth.credentials = GoogleCredentials.get_application_default()\n",
+        "drive = GoogleDrive(gauth)  \n",
+        "folder_id='1nMGkHjtKSRoGEOVg5-r04Q0lvWGIWVpS'\n",
+        "# get the folder id where you want to save your file\n",
+        "\n",
+        "file = drive.CreateFile({'parents':[{u'id': folder_id}]})\n",
+        "file.SetContentFile('y_train.pickle')\n",
+        "file.Upload() \n"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "W0617 10:11:19.359536 140040332998528 __init__.py:44] file_cache is unavailable when using oauth2client >= 4.0.0\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 36, in autodetect\n",
+            "    from google.appengine.api import memcache\n",
+            "ModuleNotFoundError: No module named 'google.appengine'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 33, in <module>\n",
+            "    from oauth2client.contrib.locked_file import LockedFile\n",
+            "ModuleNotFoundError: No module named 'oauth2client.contrib.locked_file'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 37, in <module>\n",
+            "    from oauth2client.locked_file import LockedFile\n",
+            "ModuleNotFoundError: No module named 'oauth2client.locked_file'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 41, in autodetect\n",
+            "    from . import file_cache\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 41, in <module>\n",
+            "    'file_cache is unavailable when using oauth2client >= 4.0.0')\n",
+            "ImportError: file_cache is unavailable when using oauth2client >= 4.0.0\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gdc88NM-6KtS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 530
+        },
+        "outputId": "74fb84ff-3659-478c-ec34-1f0de532d12a"
+      },
+      "source": [
+        "#uploading the pickle saved trained data in drive\n",
+        "from pydrive.auth import GoogleAuth\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from google.colab import auth\n",
+        "from oauth2client.client import GoogleCredentials\n",
+        "\n",
+        "# 1. Authenticate and create the PyDrive client.\n",
+        "auth.authenticate_user()\n",
+        "gauth = GoogleAuth()\n",
+        "gauth.credentials = GoogleCredentials.get_application_default()\n",
+        "drive = GoogleDrive(gauth)  \n",
+        "folder_id='1nMGkHjtKSRoGEOVg5-r04Q0lvWGIWVpS'\n",
+        "# get the folder id where you want to save your file\n",
+        "\n",
+        "file = drive.CreateFile({'parents':[{u'id': folder_id}]})\n",
+        "file.SetContentFile('y_validate.pickle')\n",
+        "file.Upload() "
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "W0617 10:11:36.395754 140040332998528 __init__.py:44] file_cache is unavailable when using oauth2client >= 4.0.0\n",
             "Traceback (most recent call last):\n",
             "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 36, in autodetect\n",
             "    from google.appengine.api import memcache\n",
