Model save and training data saved and load #Todo: validate if it actually loaded

--- a/Subin_dQd.ipynb
+++ b/Subin_dQd.ipynb
@@ -883,13 +883,36 @@
       "metadata": {
         "id": "pdqcx0Zl05t5",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "61323a24-3f89-4268-84be-933bbf10676d"
       },
       "source": [
-        "!ls '/content/drive/My Drive/Project/Pickle'"
+        "# loading the saved data from google drive\n",
+        "DATA_PATH = \"/content/drive/My Drive/Project/Pickle\"\n",
+        "infile = open(DATA_PATH+'/x_train.pickle','rb')\n",
+        "x_train = pickle.load(infile)\n",
+        "infile = open(DATA_PATH+'/x_validate.pickle','rb')\n",
+        "x_validate = pickle.load(infile)\n",
+        "infile = open(DATA_PATH+'/y_train.pickle','rb')\n",
+        "y_train = pickle.load(infile)\n",
+        "infile = open(DATA_PATH+'/y_validate.pickle','rb')\n",
+        "y_validate = pickle.load(infile)\n",
+        "##probably works dont really know need to check later"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:10: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+            "  # Remove the CWD from sys.path while we load stuff.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
