model save train and test data saved and loaded #todo: validate train and validate data and loading the model

--- a/Subin_dQd.ipynb
+++ b/Subin_dQd.ipynb
@@ -69,10 +69,10 @@
       "metadata": {
         "id": "wmC6aoUht9zR",
         "colab_type": "code",
-        "outputId": "dc15673a-ff31-499c-b4fd-d576f1fa818f",
+        "outputId": "e96a8d2d-72f1-481a-fbc2-0a0051404a6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 160
+          "height": 70
         }
       },
       "source": [
@@ -83,6 +83,7 @@
         "import re\n",
         "import nltk\n",
         "from nltk.corpus import stopwords\n",
+        "\n",
         "\n",
         "nltk.download('stopwords')\n",
         "\n",
@@ -95,17 +96,13 @@
         "import sys\n",
         "sys.path.append('/content/drive/My Drive/Project')"
       ],
-      "execution_count": 2,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
             "Mounted at /content/drive\n"
           ],
           "name": "stdout"
@@ -883,11 +880,7 @@
       "metadata": {
         "id": "pdqcx0Zl05t5",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        },
-        "outputId": "61323a24-3f89-4268-84be-933bbf10676d"
+        "colab": {}
       },
       "source": [
         "# loading the saved data from google drive\n",
@@ -902,17 +895,8 @@
         "y_validate = pickle.load(infile)\n",
         "##probably works dont really know need to check later"
       ],
-      "execution_count": 66,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:10: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
-            "  # Remove the CWD from sys.path while we load stuff.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -983,7 +967,7 @@
       "metadata": {
         "id": "2vdeYPxYTicf",
         "colab_type": "code",
-        "outputId": "5b5c5c20-0532-45b0-a011-fe64159e791b",
+        "outputId": "d5efa074-2c4f-42f8-dea0-6fa4725b6822",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 404
@@ -1036,12 +1020,12 @@
         "# summary of model\n",
         "print(model.summary())\n"
       ],
-      "execution_count": 0,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"model_6\"\n",
+            "Model: \"model\"\n",
             "__________________________________________________________________________________________________\n",
             "Layer (type)                    Output Shape         Param #     Connected to                     \n",
             "==================================================================================================\n",
@@ -1052,14 +1036,14 @@
             "embedding_layer (Embedding)     (None, 50, 300)      25796400    left_input[0][0]                 \n",
             "                                                                 right_input[0][0]                \n",
             "__________________________________________________________________________________________________\n",
-            "LSTM_layer (LSTM)               (None, 50)           70200       embedding_layer[0][0]            \n",
+            "LSTM_layer (CuDNNLSTM)          (None, 50)           70400       embedding_layer[0][0]            \n",
             "                                                                 embedding_layer[1][0]            \n",
             "__________________________________________________________________________________________________\n",
-            "lambda_6 (Lambda)               (None, 1)            0           LSTM_layer[0][0]                 \n",
+            "lambda_1 (Lambda)               (None, 1)            0           LSTM_layer[0][0]                 \n",
             "                                                                 LSTM_layer[1][0]                 \n",
             "==================================================================================================\n",
-            "Total params: 25,866,600\n",
-            "Trainable params: 70,200\n",
+            "Total params: 25,866,800\n",
+            "Trainable params: 70,400\n",
             "Non-trainable params: 25,796,400\n",
             "__________________________________________________________________________________________________\n",
             "None\n"
@@ -1073,10 +1057,10 @@
       "metadata": {
         "id": "Nt8OV8UpU-Yg",
         "colab_type": "code",
-        "outputId": "0daea44a-9106-483f-d5f4-7f0b3e327d61",
+        "outputId": "218a9e78-e151-488c-9655-975e8b5cb691",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
+          "height": 255
         }
       },
       "source": [
@@ -1104,34 +1088,25 @@
         "                 validation_data=([x_validate['left'], x_validate['right']], y_validate))\n",
         "print(hist.history)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train on 283003 samples, validate on 121287 samples\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "W0617 08:41:26.695863 140700723296128 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+            "Using TensorFlow backend.\n"
           ],
           "name": "stderr"
         },
         {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/2\n",
-            "283003/283003 [==============================] - 958s 3ms/sample - loss: 0.2490 - acc: 0.6573 - val_loss: 0.2455 - val_acc: 0.6614\n",
-            "Epoch 2/2\n",
-            "283003/283003 [==============================] - 955s 3ms/sample - loss: 0.2466 - acc: 0.6591 - val_loss: 0.2431 - val_acc: 0.6630\n",
-            "{'loss': [0.24903000583674056, 0.24657856364522518], 'acc': [0.65727925, 0.65908486], 'val_loss': [0.24545409005395358, 0.24312097510145075], 'val_acc': [0.6613569, 0.66304713]}\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-76-9803b924bb2f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# tensorboard = TensorBoard(log_dir=LOG_DIR.format(time()))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAdadelta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclipnorm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgradient_clipping_norm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'mean_squared_error'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'accuracy'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'gradient_clipping_norm' is not defined"
+          ]
         }
       ]
     },
@@ -1211,7 +1186,7 @@
       "metadata": {
         "id": "M_GQ1mRg20hM",
         "colab_type": "code",
-        "outputId": "624a6cd0-c787-4e75-f9e9-73e082d5bbaf",
+        "outputId": "f3c8f1eb-5a11-4285-f42a-090ea7de35f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 228
@@ -1222,7 +1197,7 @@
         "model.save('/content/drive/My Drive/Project/DQD.h5')\n",
         "!ls '/content/drive/My Drive'"
       ],
-      "execution_count": 0,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -1251,25 +1226,26 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 167
+          "height": 185
         },
-        "outputId": "a3f110e1-7251-4d0d-e6b6-997417fe2937"
+        "outputId": "7ad2d03e-8b1a-44bd-dd72-11c2b75b9cb9"
       },
       "source": [
         "#loading the model\n",
-        "new_model=tf.keras.models.load_model('DQD.h5')"
+        "file_obj = drive.CreateFile({'id': '1eRAXhgulFgBa3LDx8i8-Z5cUPdI0h3Zg'})     \n",
+        "file_obj.GetContentFile('DQD.h5'##doesnt work need to work on this shit"
       ],
-      "execution_count": 1,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "NameError",
+          "ename": "AttributeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-98cea019024c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnew_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DQD.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-83-9f4e1c8296a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfile_obj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdrive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCreateFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'id'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'1eRAXhgulFgBa3LDx8i8-Z5cUPdI0h3Zg'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mfile_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetContentFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DQD.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'google.colab.drive' has no attribute 'CreateFile'"
           ]
         }
       ]
