--- a/70percent.ipynb
+++ b/70percent.ipynb
@@ -720,7 +720,7 @@
       "metadata": {
         "id": "7lqahgzc2syH",
         "colab_type": "code",
-        "outputId": "16fdf182-8c65-411a-bb8e-f0235faefa33",
+        "outputId": "ec56937c-935d-4120-95f6-7b1ab242bf61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 608
@@ -738,6 +738,7 @@
         "plt.ylabel('Accuracy')\n",
         "plt.xlabel('Epoch')\n",
         "plt.legend(['Train', 'Test'], loc='upper left')\n",
+        "plt.savefig(\"abc1.png\")\n",
         "plt.show()\n",
         "\n",
         "# Plot training & validation loss values\n",
@@ -747,15 +748,16 @@
         "plt.ylabel('Loss')\n",
         "plt.xlabel('Epoch')\n",
         "plt.legend(['Train', 'Test'], loc='upper left')\n",
+        "plt.savefig(\"abc.png\")\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Training time finished.\n",
-            "2 epochs in 0:11:32.801242\n"
+            "2 epochs in 0:23:50.644577\n"
           ],
           "name": "stdout"
         },
@@ -788,15 +790,171 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M_GQ1mRg20hM",
+        "id": "IiBJzpPvc9vT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 406
+        },
+        "outputId": "f1dfe16c-64e9-41ab-8ebc-19d7277cc98d"
+      },
+      "source": [
+        "!pip install pydrive"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting pydrive\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/52/e0/0e64788e5dd58ce2d6934549676243dc69d982f198524be9b99e9c2a4fd5/PyDrive-1.3.1.tar.gz (987kB)\n",
+            "\u001b[K     |████████████████████████████████| 993kB 3.5MB/s \n",
+            "\u001b[?25hRequirement already satisfied: google-api-python-client>=1.2 in /usr/local/lib/python3.6/dist-packages (from pydrive) (1.7.9)\n",
+            "Requirement already satisfied: oauth2client>=4.0.0 in /usr/local/lib/python3.6/dist-packages (from pydrive) (4.1.3)\n",
+            "Requirement already satisfied: PyYAML>=3.0 in /usr/local/lib/python3.6/dist-packages (from pydrive) (3.13)\n",
+            "Requirement already satisfied: httplib2<1dev,>=0.9.2 in /usr/local/lib/python3.6/dist-packages (from google-api-python-client>=1.2->pydrive) (0.11.3)\n",
+            "Requirement already satisfied: google-auth-httplib2>=0.0.3 in /usr/local/lib/python3.6/dist-packages (from google-api-python-client>=1.2->pydrive) (0.0.3)\n",
+            "Requirement already satisfied: six<2dev,>=1.6.1 in /usr/local/lib/python3.6/dist-packages (from google-api-python-client>=1.2->pydrive) (1.12.0)\n",
+            "Requirement already satisfied: google-auth>=1.4.1 in /usr/local/lib/python3.6/dist-packages (from google-api-python-client>=1.2->pydrive) (1.4.2)\n",
+            "Requirement already satisfied: uritemplate<4dev,>=3.0.0 in /usr/local/lib/python3.6/dist-packages (from google-api-python-client>=1.2->pydrive) (3.0.0)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.0.5 in /usr/local/lib/python3.6/dist-packages (from oauth2client>=4.0.0->pydrive) (0.2.5)\n",
+            "Requirement already satisfied: pyasn1>=0.1.7 in /usr/local/lib/python3.6/dist-packages (from oauth2client>=4.0.0->pydrive) (0.4.5)\n",
+            "Requirement already satisfied: rsa>=3.1.4 in /usr/local/lib/python3.6/dist-packages (from oauth2client>=4.0.0->pydrive) (4.0)\n",
+            "Requirement already satisfied: cachetools>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from google-auth>=1.4.1->google-api-python-client>=1.2->pydrive) (3.1.1)\n",
+            "Building wheels for collected packages: pydrive\n",
+            "  Building wheel for pydrive (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Stored in directory: /root/.cache/pip/wheels/fa/d2/9a/d3b6b506c2da98289e5d417215ce34b696db856643bad779f4\n",
+            "Successfully built pydrive\n",
+            "Installing collected packages: pydrive\n",
+            "Successfully installed pydrive-1.3.1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RZJLzbN2cZLU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 530
+        },
+        "outputId": "cd717075-e7ea-4e25-b74c-a8a42f81ca62"
+      },
+      "source": [
+        "#uploading to google drive\n",
+        "from pydrive.auth import GoogleAuth\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from google.colab import auth\n",
+        "from oauth2client.client import GoogleCredentials\n",
+        "\n",
+        "# 1. Authenticate and create the PyDrive client.\n",
+        "auth.authenticate_user()\n",
+        "gauth = GoogleAuth()\n",
+        "gauth.credentials = GoogleCredentials.get_application_default()\n",
+        "drive = GoogleDrive(gauth)  \n",
+        "folder_id='1GxksIT3Fy-ix9rHRMcAUJqCQDckunOpu'\n",
+        "# get the folder id where you want to save your file\n",
+        "\n",
+        "file = drive.CreateFile({'parents':[{u'id': folder_id}]})\n",
+        "file.SetContentFile('abc.png')\n",
+        "file.Upload() \n"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "W0617 17:22:49.552696 139947550926720 __init__.py:44] file_cache is unavailable when using oauth2client >= 4.0.0 or google-auth\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 36, in autodetect\n",
+            "    from google.appengine.api import memcache\n",
+            "ModuleNotFoundError: No module named 'google.appengine'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 33, in <module>\n",
+            "    from oauth2client.contrib.locked_file import LockedFile\n",
+            "ModuleNotFoundError: No module named 'oauth2client.contrib.locked_file'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 37, in <module>\n",
+            "    from oauth2client.locked_file import LockedFile\n",
+            "ModuleNotFoundError: No module named 'oauth2client.locked_file'\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/__init__.py\", line 41, in autodetect\n",
+            "    from . import file_cache\n",
+            "  File \"/usr/local/lib/python3.6/dist-packages/googleapiclient/discovery_cache/file_cache.py\", line 41, in <module>\n",
+            "    'file_cache is unavailable when using oauth2client >= 4.0.0 or google-auth')\n",
+            "ImportError: file_cache is unavailable when using oauth2client >= 4.0.0 or google-auth\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qIEMR0HeddPk",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "folder_id='1GxksIT3Fy-ix9rHRMcAUJqCQDckunOpu'\n",
+        "# get the folder id where you want to save your file\n",
+        "\n",
+        "file = drive.CreateFile({'parents':[{u'id': folder_id}]})\n",
+        "file.SetContentFile('abc1.png')\n",
+        "file.Upload() "
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M_GQ1mRg20hM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        },
+        "outputId": "39bb5218-037a-4591-9a91-b283201cceb8"
+      },
+      "source": [
+        "#saving the model\n",
+        "model.save('/content/drive/My Drive/Project/DQD70.h5')\n",
+        "!ls '/content/drive/My Drive'"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "'Colab Notebooks'\n",
+            " Compressed\n",
+            " dogs-cats-images.zip\n",
+            "'energy environment and society  assignment.pdf'\n",
+            " GoogleNews-vectors-negative300.bin.gz\n",
+            " image-93b016bfc7ea033589b8766d020d99cb0108180bdaa53d05dbdaf5883674852e-V.jpg\n",
+            " Keygen.exe\n",
+            " KIC072BCT039.jpg\n",
+            "'New Doc 2019-03-03 12.05.252394441364277969478.pdf'\n",
+            " Project\n",
+            " the-new-encyclopedia-of-modern-bodybuilding-arnold.pdf\n",
+            " train.csv\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
